# modules/2-request-handler.go
@@ -4,8 +4,8 @@ import (
 	"errors"
 	"github.com/gin-gonic/gin"
 	"github.com/purawaktra/bromo1-go/dto"
+	"github.com/purawaktra/bromo1-go/functions"
 	"github.com/purawaktra/bromo1-go/utils"
-	"go.mongodb.org/mongo-driver/bson"
 	"io"
 	"net/http"
 )
@@ -29,41 +29,29 @@ type Bromo1RequestHandlerInterface interface {
 func (rh Bromo1RequestHandler) RetrieveProfilePicture(c *gin.Context) {
 	utils.Info("=== New Request ===")
 
-	// get a content type and check for err
-	contentType := c.ContentType()
-	if contentType != "application/bson" {
-		utils.Error(errors.New("contentType not match"), "RetrieveProfilePicture", "")
-		c.Data(http.StatusBadRequest, "", nil)
-	}
-
-	// get request body and check err
-	readData, err := io.ReadAll(c.Request.Body)
+	// get header and check for err
+	var header dto.Header
+	err := c.BindHeader(&header)
 	if err != nil {
 		utils.Error(err, "RetrieveProfilePicture", "")
 		c.Data(http.StatusBadRequest, "", nil)
 		return
 	}
 
-	// parse data to struct and check err
-	var requestBody dto.Request
-	err = bson.Unmarshal(readData, &requestBody)
-	if err != nil {
+	// check for request id
+	if functions.IsValidUUID(header.RequestId) {
 		utils.Error(err, "RetrieveProfilePicture", "")
 		c.Data(http.StatusBadRequest, "", nil)
 		return
 	}
 
 	// call controller for the profile picture and check err
-	utils.Debug("RetrieveProfilePicture", requestBody)
-	response, err := rh.ctrl.RetrieveProfilePicture(requestBody)
-	if err != nil {
-		utils.Error(err, "RetrieveProfilePicture", "")
-		c.Data(http.StatusInternalServerError, "", nil)
-		return
+	request := dto.Request{
+		RequestId:  header.RequestId,
+		DocumentId: header.DocumentId,
 	}
-
-	// parse response to bson data
-	result, err := bson.Marshal(response)
+	utils.Debug("RetrieveProfilePicture", request)
+	response, data, err := rh.ctrl.RetrieveProfilePicture(request)
 	if err != nil {
 		utils.Error(err, "RetrieveProfilePicture", "")
 		c.Data(http.StatusInternalServerError, "", nil)
@@ -71,8 +59,11 @@ func (rh Bromo1RequestHandler) RetrieveProfilePicture(c *gin.Context) {
 	}
 
 	// create success return
-	c.Header("Content-Type", "application/bson")
-	c.Data(http.StatusOK, "", result)
+	c.Header("response_id", response.ResponseId)
+	c.Header("response_time", response.ResponseTime)
+	c.Header("message", response.Message)
+	c.Header("request_id", response.RequestId)
+	c.Data(http.StatusOK, "image/*", data)
 	return
 }
 
@@ -81,9 +72,25 @@ func (rh Bromo1RequestHandler) StoreProfilePicture(c *gin.Context) {
 
 	// get a content type and check for err
 	contentType := c.ContentType()
-	if contentType != "application/bson" {
+	if contentType != "image/*" {
 		utils.Error(errors.New("contentType not match"), "StoreProfilePicture", "")
 		c.Data(http.StatusBadRequest, "", nil)
+	}
+
+	// get header and check for err
+	var header dto.HeaderStorePhotoProfile
+	err := c.BindHeader(&header)
+	if err != nil {
+		utils.Error(err, "StoreProfilePicture", "")
+		c.Data(http.StatusBadRequest, "", nil)
+		return
+	}
+
+	// check for request id
+	if functions.IsValidUUID(header.RequestId) {
+		utils.Error(err, "StoreProfilePicture", "")
+		c.Data(http.StatusBadRequest, "", nil)
+		return
 	}
 
 	// get request body and check err
@@ -94,26 +101,13 @@ func (rh Bromo1RequestHandler) StoreProfilePicture(c *gin.Context) {
 		return
 	}
 
-	// parse data to struct and check err
-	var requestBody dto.Request
-	err = bson.Unmarshal(readData, &requestBody)
-	if err != nil {
-		utils.Error(err, "StoreProfilePicture", "")
-		c.Data(http.StatusBadRequest, "", nil)
-		return
-	}
-
 	// call controller for the profile picture and check err
-	utils.Debug("StoreProfilePicture", requestBody)
-	response, err := rh.ctrl.StoreProfilePicture(requestBody)
-	if err != nil {
-		utils.Error(err, "StoreProfilePicture", "")
-		c.Data(http.StatusInternalServerError, "", nil)
-		return
+	request := dto.Request{
+		RequestId: header.RequestId,
+		AccountId: header.AccountId,
 	}
-
-	// parse response to bson data
-	result, err := bson.Marshal(response)
+	utils.Debug("StoreProfilePicture", header)
+	response, err := rh.ctrl.StoreProfilePicture(request, readData)
 	if err != nil {
 		utils.Error(err, "StoreProfilePicture", "")
 		c.Data(http.StatusInternalServerError, "", nil)
@@ -121,49 +115,40 @@ func (rh Bromo1RequestHandler) StoreProfilePicture(c *gin.Context) {
 	}
 
 	// create success return
-	c.Header("Content-Type", "application/bson")
-	c.Data(http.StatusOK, "", result)
+	c.Header("response_id", response.ResponseId)
+	c.Header("response_time", response.ResponseTime)
+	c.Header("message", response.Message)
+	c.Header("request_id", response.RequestId)
+	c.Data(http.StatusOK, "", []byte(""))
 	return
 }
 
 func (rh Bromo1RequestHandler) RemoveProfilePicture(c *gin.Context) {
 	utils.Info("=== New Request ===")
 
-	// get a content type and check for err
-	contentType := c.ContentType()
-	if contentType != "application/bson" {
-		utils.Error(errors.New("contentType not match"), "RemoveProfilePicture", "")
-		c.Data(http.StatusBadRequest, "", nil)
-	}
-
-	// get request body and check err
-	readData, err := io.ReadAll(c.Request.Body)
+	// get header and check for err
+	var header dto.Header
+	err := c.BindHeader(&header)
 	if err != nil {
 		utils.Error(err, "RemoveProfilePicture", "")
 		c.Data(http.StatusBadRequest, "", nil)
 		return
 	}
 
-	// parse data to struct and check err
-	var requestBody dto.Request
-	err = bson.Unmarshal(readData, &requestBody)
-	if err != nil {
+	// check for request id
+	if functions.IsValidUUID(header.RequestId) {
 		utils.Error(err, "RemoveProfilePicture", "")
 		c.Data(http.StatusBadRequest, "", nil)
 		return
 	}
 
 	// call controller for the profile picture and check err
-	utils.Debug("RemoveProfilePicture", requestBody)
-	response, err := rh.ctrl.RemoveProfilePicture(requestBody)
-	if err != nil {
-		utils.Error(err, "RemoveProfilePicture", "")
-		c.Data(http.StatusInternalServerError, "", nil)
-		return
+	request := dto.Request{
+		RequestId:  header.RequestId,
+		DocumentId: header.DocumentId,
 	}
-
-	// parse response to bson data
-	result, err := bson.Marshal(response)
+	utils.Debug("RemoveProfilePicture", request)
+	response, err := rh.ctrl.RemoveProfilePicture(request)
 	if err != nil {
 		utils.Error(err, "RemoveProfilePicture", "")
 		c.Data(http.StatusInternalServerError, "", nil)
@@ -171,7 +156,10 @@ func (rh Bromo1RequestHandler) RemoveProfilePicture(c *gin.Context) {
 	}
 
 	// create success return
-	c.Header("Content-Type", "application/bson")
-	c.Data(http.StatusOK, "", result)
+	c.Header("response_id", response.ResponseId)
+	c.Header("response_time", response.ResponseTime)
+	c.Header("message", response.Message)
+	c.Header("request_id", response.RequestId)
+	c.Data(http.StatusOK, "", []byte(""))
 	return
 }
